--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,28 +2,27 @@ dependencies {
     // Network plugins
     implementation 'Server:Paper:1.21.1-122'
     implementation 'Plugin:PlayerReferrals:1.3.3'
-    implementation 'Plugin:BuycraftX:12.0.8'
-    implementation 'Plugin:ChatControlRed:10.22.3'
-    implementation 'Plugin:CommandPanels:3.19.1.7'
-    implementation 'Plugin:DecentHolograms:2.8.4'
-    implementation 'Plugin:Essentials:2.20.1'
-    implementation 'Plugin:EssentialsSpawn:2.20.1'
+    implementation 'Plugin:Tebex:2.0.+'
+    implementation 'Plugin:ChatControlRed:10.28.0'
+    implementation 'Plugin:CommandPanels:3.21.4.2'
+    implementation 'Plugin:DecentHolograms:2.8.11'
+    implementation 'Plugin:Essentials:2.21.0-dev+115-6157668'
+    implementation 'Plugin:EssentialsSpawn:2.21.0-dev+115-6157668'
     implementation 'Plugin:FastAsyncWorldEdit:2.11.3-SNAPSHOT-908-c249654'
-    implementation 'Plugin:GadgetsMenu:5.13.4'
+    implementation 'Plugin:GadgetsMenu:5.18.9'
     implementation 'Plugin:HexNicks:3.1.1'
-    implementation 'Plugin:GSit:1.5.3'
-    // implementation 'Plugin:LibsDisguises:10.0.38'
-    implementation 'Plugin:LuckPerms:5.4.108'
-    implementation 'Plugin:Multiverse-Core:4.3.12'
-    implementation 'Plugin:PlaceholderAPI:2.11.5'
-    implementation 'Plugin:Plan-Bungee:5.6-build-2614'
-    implementation 'Plugin:ProtocolLib:5.1.1-SNAPSHOT-673'
-    implementation 'Plugin:spark:1.10.43'
-    implementation 'Plugin:TAB-Bungee:4.0.9'
-    implementation 'Plugin:Vault:1.7.3-b131'
-    implementation 'Plugin:ViaVersion-Bungee:4.8.1'
-    implementation 'Plugin:VotingPlugin-Bungee:6.14.1'
-    implementation 'Plugin:WorldGuard:7.0.9+5934e49'
+    implementation 'Plugin:GSit:1.10.0'
+    implementation 'Plugin:LibsDisguises:10.0.44-20241015.200044-1'
+    implementation 'Plugin:LuckPerms:5.4.141'
+    implementation 'Plugin:Multiverse-Core:4.+'
+    implementation 'Plugin:PlaceholderAPI:2.11.6'
+    implementation 'Plugin:ProtocolLib:5.2.+'
+    implementation 'Plugin:Plan:5.6-build-2883'
+    implementation 'Plugin:TAB:5.0.1'
+    implementation 'Plugin:Vault:1.7.+'
+    implementation 'Plugin:ViaVersion:5.0.+'
+    implementation 'Plugin:VotingPlugin-Bungee:6.16.+'
+    implementation 'Plugin:WorldGuard:7.0.+'
     // implementation 'Vulcan:Vulcan:2.7.5'
 
     
