updated db password and dockerfile

--- a/plugins/Parkour/config.yml
+++ b/plugins/Parkour/config.yml
@@ -312,7 +312,7 @@ MySQL:
   Use: true
   URL: jdbc:mysql://tfb-parkour-db:3306/parkour?useSSL=false
   Username: tfb_parkour
-  Password: MqGR6uD4SFPXTmK6uweVMCZ7pkTTfi
+  Password: WaLFY@^9!yc8Kg*y^DPt6urL6MS$HV
   LegacyDriver: false
 Version: 7.2.0
 LobbySettings:
