--- a/plugins/LuckPerms/config.yml
+++ b/plugins/LuckPerms/config.yml
@@ -95,15 +95,15 @@ data:
   # - The standard DB engine port is used by default
   #   (MySQL: 3306, PostgreSQL: 5432, MongoDB: 27017)
   # - Specify as "host:port" if differs
-  address: tfb-database-mariadb
+  address: tfb-network-db
 
   # The name of the database to store LuckPerms data in.
   # - This must be created already. Don't worry about this setting if you're using MongoDB.
-  database: luckperms
+  database: tfb_network_luckperms
 
   # Credentials for the database.
-  username: tfb_luckperms
-  password: 'uEJq!fjGM!62*&cmX*mBRhT9L2@SgX'
+  username: tfb_network
+  password: 'ifFfF4cUeEYVXCZ4a5494sjVS8oBZL'
 
   # These settings apply to the MySQL connection pool.
   # - The default values will be suitable for the majority of users.
