update db credentials for plugins

--- a/plugins/GadgetsMenu/config.yml
+++ b/plugins/GadgetsMenu/config.yml
@@ -7,7 +7,7 @@
 Player-Data:
   Storage: mysql
   MySQL:
-    hostname: tfb-database-mariadb
+    hostname: tfb-network-db
     username: tfb_gadgetsmenu
     database: gadgetsmenu
     port: '3306'
