--- a/plugins/ChatControlRed/mysql.yml
+++ b/plugins/ChatControlRed/mysql.yml
@@ -20,16 +20,16 @@ Enabled: true
 Hikari: true
 
 # The host and the port to connect to
-Host: tfb-database-mariadb:3306
+Host: tfb-network-db:3306
 
 # The database name
-Database: chatcontrolred
+Database: tfb_network_chatcontrolred
 
 # The username
-User: tfb_chatcontrolred
+User: tfb_network
 
 # The password
-Password: e&cqyYXtqjgfL!hEGMyFpqMi89!g9w
+Password: ifFfF4cUeEYVXCZ4a5494sjVS8oBZL
 
 # ADVANCED: The full connector line, do not modify unless you know what you are doing.
 # If facing issues try appending &useUnicode=yes&characterEncoding=UTF-8 at the end.
