--- a/plugins/VotingPlugin/Config.yml
+++ b/plugins/VotingPlugin/Config.yml
@@ -14,12 +14,12 @@ DataStorage: MYSQL
 # Information for mysql
 # See the end of the config for cache options
 MySQL:
-  Host: 'maritfb-database-mariadbadb'
+  Host: 'tfb-network-db'
   # Default port is 3306
   Port: 3306
-  Database: 'votingplugin'
-  Username: 'tfb_votingplugin'
-  Password: '5wZw5@ySSE@zZSd4b#QFrPfsedwhzz'
+  Database: 'tfb_network_votingplugin'
+  Username: 'tfb_network'
+  Password: 'ifFfF4cUeEYVXCZ4a5494sjVS8oBZL'
   # Max number of connections
   MaxConnections: 1
   # Table name prefix, for use with mutliple servers
