--- a/plugins/GadgetsMenu/config.yml
+++ b/plugins/GadgetsMenu/config.yml
@@ -8,10 +8,10 @@ Player-Data:
   Storage: mysql
   MySQL:
     hostname: tfb-network-db
-    username: tfb_gadgetsmenu
-    database: gadgetsmenu
+    username: tfb_network
+    database: tfb_network_gadgetsmenu
     port: '3306'
-    password: vF53CRgmZt*@8y6y3f#ku&L*d4*fj^
+    password: ifFfF4cUeEYVXCZ4a5494sjVS8oBZL
     useSSL: false
 
 Cosmetic-Item-Purchase:
