--- a/plugins/Parkour/config.yml
+++ b/plugins/Parkour/config.yml
@@ -310,7 +310,7 @@ SQLite:
   PathOverride: ''
 MySQL:
   Use: true
-  URL: jdbc:mysql://tfb-parkour-db:3306/parkour?useSSL=false
+  URL: jdbc:mysql://tfb-parkour-db:3306/tfb_parkour_parkour?useSSL=false
   Username: tfb_parkour
   Password: WaLFY@^9!yc8Kg*y^DPt6urL6MS$HV
   LegacyDriver: false
