--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,6 @@
 dependencies {
     // Network plugins
     implementation 'Server:Paper:1.21.1-122'
-    implementation 'Plugin:PlayerReferrals:1.3.3'
     implementation 'Plugin:Tebex:2.0.+'
     implementation 'Plugin:ChatControlRed:10.28.0'
     implementation 'Plugin:CommandPanels:3.21.4.2'
@@ -12,7 +11,7 @@ dependencies {
     implementation 'Plugin:GadgetsMenu:5.18.9'
     implementation 'Plugin:HexNicks:3.1.1'
     implementation 'Plugin:GSit:1.10.0'
-    implementation 'Plugin:LibsDisguises:10.0.44-20241015.200044-1'
+    implementation 'Plugin:LibsDisguises:10.0.44'
     implementation 'Plugin:LuckPerms:5.4.141'
     implementation 'Plugin:Multiverse-Core:4.+'
     implementation 'Plugin:PlaceholderAPI:2.11.6'
@@ -20,7 +19,7 @@ dependencies {
     implementation 'Plugin:Plan:5.6-build-2883'
     implementation 'Plugin:TAB:5.0.1'
     implementation 'Plugin:Vault:1.7.+'
-    implementation 'Plugin:ViaVersion:5.0.+'
+    // implementation 'Plugin:ViaVersion:5.1.1'
     implementation 'Plugin:VotingPlugin-Bungee:6.16.+'
     implementation 'Plugin:WorldGuard:7.0.+'
     // implementation 'Vulcan:Vulcan:2.7.5'
