--- a/build.gradle
+++ b/build.gradle
@@ -2,35 +2,35 @@ import java.util.jar.JarFile
 import org.yaml.snakeyaml.Yaml
 
 buildscript {
-  repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
-  }
-  dependencies {
-    classpath("org.yaml:snakeyaml:2.0")
-    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:5.1.10"
-  }
+    dependencies {
+        classpath("org.yaml:snakeyaml:2.0")
+    }
 }
 
 plugins {
     id 'java'
     id 'groovy'
+    id 'maven-publish'
 }
-
-apply plugin: "com.jfrog.artifactory"
-apply plugin: 'maven-publish'
 
 apply from: 'dependencies.gradle'
 
-if("$System.env.MAVEN_URL" != null) {
-    ext.MAVEN_URL="$System.env.MAVEN_URL"+"/"+"tfb"
-    ext.MAVEN_PASSWORD="$System.env.MAVEN_PASSWORD"
-    ext.MAVEN_USERNAME="$System.env.MAVEN_USERNAME"
+// Use environment instead of gradle.properties
+if ("$System.env.MAVEN_URL" != null) {
+    ext.MAVEN_URL = "$System.env.MAVEN_URL" + "/tfb"
+    ext.MAVEN_PASSWORD = "$System.env.MAVEN_PASSWORD"
+    ext.MAVEN_USERNAME = "$System.env.MAVEN_USERNAME"
 }
-// TFB Artifactory
+
+// Nexus repository configuration
 repositories {
-    mavenCentral {
+    mavenCentral()
+    maven {
         url "${MAVEN_URL}"
         credentials {
             username = "${MAVEN_USERNAME}"
@@ -41,8 +41,8 @@ repositories {
 
 // Type "gradle plugins" in terminal to update plugins
 task plugins(type: Copy) {
-    doFirst{
-    delete fileTree(dir: 'plugins/.', include: '/*.jar')
+    doFirst {
+        delete fileTree(dir: 'plugins/.', include: '/*.jar')
     }
     from configurations.compileClasspath
     exclude '*Paper*', '*Flamecord*', '*Expansion*', 'Purpur*'
@@ -51,8 +51,8 @@ task plugins(type: Copy) {
 
 // Type "gradle expansions" in terminal to update PAPI Expansions
 task expansions(type: Copy) {
-    doFirst{
-    delete fileTree(dir: 'plugins/PlaceholderAPI/expansions/.', include: '/*.jar')
+    doFirst {
+        delete fileTree(dir: 'plugins/PlaceholderAPI/expansions/.', include: '/*.jar')
     }
     from configurations.compileClasspath
     include '*Expansion*'
@@ -61,8 +61,8 @@ task expansions(type: Copy) {
 
 // Type "gradle server" in terminal to update server
 task server(type: Copy) {
-    doFirst{
-    delete fileTree(dir: '/.' , include: 'server.jar')
+    doFirst {
+        delete fileTree(dir: '/.', include: 'server.jar')
     }
     from configurations.compileClasspath
     include 'Paper-*', 'Flamecord-*', 'Purpur-*'
@@ -74,12 +74,12 @@ task update(dependsOn: ['server', 'plugins', 'expansions'])
 
 ext.dir = new File("_plugins")
 def files = ext.dir.listFiles().findAll { it.isFile() && it.name.endsWith('.jar') }
-def allowedPrefixes = ["Paper", "FlameCord","Purpur", "Expansion"]
+def allowedPrefixes = ["Paper", "FlameCord", "Purpur", "Expansion"]
 
 def dists = []
 
 files.each { file ->
-if (allowedPrefixes.any { prefix -> file.name.startsWith(prefix) } && file.name.endsWith(".jar")) {
+    if (allowedPrefixes.any { prefix -> file.name.startsWith(prefix) } && file.name.endsWith(".jar")) {
         def fileName = file.name - '.jar' // Remove the ".jar" extension
         
         if (fileName.startsWith("Expansion-")) {
@@ -115,7 +115,6 @@ if (allowedPrefixes.any { prefix -> file.name.startsWith(prefix) } && file.name.
             println("Found JAR: groupId=$groupId, artifactId=$artifactId, version=$version, path=$path")
 
             dists << [groupId: groupId, artifactId: artifactId, version: version, path: path]
-            
         }
     } else {
         def jarFile = new JarFile(file)
@@ -154,28 +153,21 @@ if (allowedPrefixes.any { prefix -> file.name.startsWith(prefix) } && file.name.
 publishing {
     publications {
         dists.each { dist ->
-            "$dist.artifactId"(MavenPublication) {
-                groupId dist.groupId
-                version = dist.version
+            create(dist.artifactId, MavenPublication) {
+                groupId = dist.groupId
                 artifactId = dist.artifactId
+                version = dist.version
 
                 artifact dist.path
             }
         }
     }
-}
-
-artifactory {
-    contextUrl = "https://jfrog.theflyingbirds.net/artifactory"
-    publish {
-        repository {
-            repoKey = 'tfb'
-            username = "${MAVEN_USERNAME}"
-            password = "${MAVEN_PASSWORD}"
-        }
-        defaults {
-            dists.each { dist ->
-                publications(dist.artifactId)
+    repositories {
+        maven {
+            url = "${MAVEN_URL}"
+            credentials {
+                username = "${MAVEN_USERNAME}"
+                password = "${MAVEN_PASSWORD}"
             }
         }
     }
