--- a/plugins/CommandPanels/panels/parkour_ranked.yml
+++ b/plugins/CommandPanels/panels/parkour_ranked.yml
@@ -19,133 +19,172 @@ panels:
           - 'Left click to join'
           - 'Right click to view stats'
           - 'Middle click to view leaderboard'
+          
         '0':
           material: BOOK
           stack: 1
-          name: '&r&b%parkour_course_displayname_easy%&r (Views: &b%parkour_course_views_easy%&r)'
+          name: '&r&b%parkour_course_displayname_easy%&r | Online: &b%parkour_course_players_easy%'
           lore:
           - '&eBest time: &f%parkour_course_record_easy_player%&8: &b%parkour_course_record_easy_time%'
-          - '&eCreated by: &f%parkour_course_creator_easy%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_easy%&r | &ejoin-fee: &b$%parkour_course_joinfee_easy%'
           - '&eReward: &b$%parkour_course_ecoreward_easy% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_easy%'
-          - '&eOnline: &b%parkour_course_players_easy%'
+          - '&eCompletions: &b%parkour_course_completions_easy%&r | &eViews: &b%parkour_course_views_easy% &r(&b%math_0:1_100/{parkour_course_views_easy}*{parkour_course_completions_easy}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_easy%'
           commands:
           - left= parkour join easy
           - right= parkour stats easy
           - middle= parkour leaderboard easy
-        '9':
-          material: BOOK
-          stack: 1
-          name: '&r&b%parkour_course_displayname_medium%&r (Views: &b%parkour_course_views_medium%&r)'
-          lore:
-          - '&eBest time: &f%parkour_course_record_medium_player%&8: &b%parkour_course_record_medium_time%'
-          - '&eCreated by: &f%parkour_course_creator_medium%'
-          - '&eReward: &b$%parkour_course_ecoreward_medium% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_medium%'
-          - '&eOnline: &b%parkour_course_players_medium%'
-          commands:
-          - left= parkour join medium
-          - right= parkour stats medium
-          - middle= parkour leaderboard medium
-        '18':
-          material: BOOK
-          stack: 1
-          name: '&r&b%parkour_course_displayname_hard%&r (Views: &b%parkour_course_views_hard%&r)'
-          lore:
-          - '&eBest time: &f%parkour_course_record_hard_player%&8: &b%parkour_course_record_hard_time%'
-          - '&eCreated by: &f%parkour_course_creator_hard%'
-          - '&eReward: &b$%parkour_course_ecoreward_hard% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_hard%'
-          - '&eOnline: &b%parkour_course_players_hard%'
-          commands:
-          - left= parkour join hard
-          - right= parkour stats hard
-          - middle= parkour leaderboard hard
-        '27':
-          material: BOOK
-          stack: 1
-          name: '&r&b%parkour_course_displayname_expert%&r (Views: &b%parkour_course_views_expert%&r)'
-          lore:
-          - '&eBest time: &f%parkour_course_record_expert_player%&8: &b%parkour_course_record_expert_time%'
-          - '&eCreated by: &f%parkour_course_creator_expert%'
-          - '&eReward: &b$%parkour_course_ecoreward_expert% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_expert%'
-          - '&eOnline: &b%parkour_course_players_expert%'
-          commands:
-          - left= parkour join expert
-          - right= parkour stats expert
-          - middle= parkour leaderboard expert
         '2':
           material: BOOK
           stack: 1
-          name: '&r&b%parkour_course_displayname_rainbowrun%&r (Views: &b%parkour_course_views_rainbowrun%&r)'
+          name: '&r&b%parkour_course_displayname_rainbowrun%&r | Online: &b%parkour_course_players_rainbowrun%'
           lore:
           - '&eBest time: &f%parkour_course_record_rainbowrun_player%&8: &b%parkour_course_record_rainbowrun_time%'
-          - '&eCreated by: &f%parkour_course_creator_rainbowrun%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_rainbowrun%&r | &ejoin-fee: &b$%parkour_course_joinfee_rainbowrun%'
           - '&eReward: &b$%parkour_course_ecoreward_rainbowrun% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_rainbowrun%'
-          - '&eOnline: &b%parkour_course_players_rainbowrun%'
+          - '&eCompletions: &b%parkour_course_completions_rainbowrun%&r | &eViews: &b%parkour_course_views_rainbowrun% &r(&b%math_0:1_100/{parkour_course_views_rainbowrun}*{parkour_course_completions_rainbowrun}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_rainbowrun%'
           commands:
           - left= parkour join rainbowrun
           - right= parkour stats rainbowrun
           - middle= parkour leaderboard rainbowrun
-        '11':
-          material: BOOK
-          stack: 1
-          name: '&r&b%parkour_course_displayname_rainbowclimb%&r (Views: &b%parkour_course_views_rainbowclimb%&r)'
-          lore:
-          - '&eBest time: &f%parkour_course_record_rainbowclimb_player%&8: &b%parkour_course_record_rainbowclimb_time%'
-          - '&eCreated by: &f%parkour_course_creator_rainbowclimb%'
-          - '&eReward: &b$%parkour_course_ecoreward_rainbowclimb% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_rainbowclimb%'
-          - '&eOnline: &b%parkour_course_players_rainbowclimb%'
-          commands:
-          - left= parkour join rainbowclimb
-          - right= parkour stats rainbowclimb
-          - middle= parkour leaderboard rainbowclimb
-        '20':
-          material: BOOK
-          stack: 1
-          name: '&r&b%parkour_course_displayname_rainbowfall%&r (Views: &b%parkour_course_views_rainbowfall%&r)'
-          lore:
-          - '&eBest time: &f%parkour_course_record_rainbowfall_player%&8: &b%parkour_course_record_rainbowfall_time%'
-          - '&eCreated by: &f%parkour_course_creator_rainbowfall%'
-          - '&eReward: &b$%parkour_course_ecoreward_rainbowfall% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_rainbowfall%'
-          - '&eOnline: &b%parkour_course_players_rainbowfall%'
-          commands:
-          - left= parkour join rainbowfall
-          - right= parkour stats rainbowfall
-          - middle= parkour leaderboard rainbowfall
         '4':
           material: BOOK
           stack: 1
-          name: '&r&b%parkour_course_displayname_treeoflife%&r (Views: &b%parkour_course_views_treeoflife%&r)'
+          name: '&r&b%parkour_course_displayname_treeoflife%&r | Online: &b%parkour_course_players_treeoflife%'
           lore:
           - '&eBest time: &f%parkour_course_record_treeoflife_player%&8: &b%parkour_course_record_treeoflife_time%'
-          - '&eCreated by: &f%parkour_course_creator_treeoflife%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_treeoflife%&r | &ejoin-fee: &b$%parkour_course_joinfee_treeoflife%'
           - '&eReward: &b$%parkour_course_ecoreward_treeoflife% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_treeoflife%'
-          - '&eOnline: &b%parkour_course_players_treeoflife%'
+          - '&eCompletions: &b%parkour_course_completions_treeoflife%&r | &eViews: &b%parkour_course_views_treeoflife% &r(&b%math_0:1_100/{parkour_course_views_treeoflife}*{parkour_course_completions_treeoflife}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_treeoflife%'
           commands:
           - left= parkour join treeoflife
           - right= parkour stats treeoflife
           - middle= parkour leaderboard treeoflife
+        '9':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_medium%&r | Online: &b%parkour_course_players_medium%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_medium_player%&8: &b%parkour_course_record_medium_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_medium%&r | &ejoin-fee: &b$%parkour_course_joinfee_medium%'
+          - '&eReward: &b$%parkour_course_ecoreward_medium% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_medium%'
+          - '&eCompletions: &b%parkour_course_completions_medium%&r | &eViews: &b%parkour_course_views_medium% &r(&b%math_0:1_100/{parkour_course_views_medium}*{parkour_course_completions_medium}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_medium%'
+          commands:
+          - left= parkour join medium
+          - right= parkour stats medium
+          - middle= parkour leaderboard medium
+        '11':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_rainbowclimb%&r | Online: &b%parkour_course_players_rainbowclimb%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_rainbowclimb_player%&8: &b%parkour_course_record_rainbowclimb_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_rainbowclimb%&r | &ejoin-fee: &b$%parkour_course_joinfee_rainbowclimb%'
+          - '&eReward: &b$%parkour_course_ecoreward_rainbowclimb% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_rainbowclimb%'
+          - '&eCompletions: &b%parkour_course_completions_rainbowclimb%&r | &eViews: &b%parkour_course_views_rainbowclimb% &r(&b%math_0:1_100/{parkour_course_views_rainbowclimb}*{parkour_course_completions_rainbowclimb}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_rainbowclimb%'
+          commands:
+          - left= parkour join rainbowclimb
+          - right= parkour stats rainbowclimb
+          - middle= parkour leaderboard rainbowclimb
         '13':
           material: BOOK
           stack: 1
-          name: '&r&b%parkour_course_displayname_skywars%&r (Views: &b%parkour_course_views_skywars%&r)'
+          name: '&r&b%parkour_course_displayname_skywars%&r | Online: &b%parkour_course_players_skywars%'
           lore:
           - '&eBest time: &f%parkour_course_record_skywars_player%&8: &b%parkour_course_record_skywars_time%'
-          - '&eCreated by: &f%parkour_course_creator_skywars%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_skywars%&r | &ejoin-fee: &b$%parkour_course_joinfee_skywars%'
           - '&eReward: &b$%parkour_course_ecoreward_skywars% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_skywars%'
-          - '&eOnline: &b%parkour_course_players_skywars%'
+          - '&eCompletions: &b%parkour_course_completions_skywars%&r | &eViews: &b%parkour_course_views_skywars% &r(&b%math_0:1_100/{parkour_course_views_skywars}*{parkour_course_completions_skywars}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_skywars%'
           commands:
           - left= parkour join skywars
           - right= parkour stats skywars
           - middle= parkour leaderboard skywars
+        '18':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_hard%&r | Online: &b%parkour_course_players_hard%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_hard_player%&8: &b%parkour_course_record_hard_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_hard%&r | &ejoin-fee: &b$%parkour_course_joinfee_hard%'
+          - '&eReward: &b$%parkour_course_ecoreward_hard% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_hard%'
+          - '&eCompletions: &b%parkour_course_completions_hard%&r | &eViews: &b%parkour_course_views_hard% &r(&b%math_0:1_100/{parkour_course_views_hard}*{parkour_course_completions_hard}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_hard%'
+          commands:
+          - left= parkour join hard
+          - right= parkour stats hard
+          - middle= parkour leaderboard hard
+        '20':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_rainbowfall%&r | Online: &b%parkour_course_players_rainbowfall%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_rainbowfall_player%&8: &b%parkour_course_record_rainbowfall_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_rainbowfall%&r | &ejoin-fee: &b$%parkour_course_joinfee_rainbowfall%'
+          - '&eReward: &b$%parkour_course_ecoreward_rainbowfall% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_rainbowfall%'
+          - '&eCompletions: &b%parkour_course_completions_rainbowfall%&r | &eViews: &b%parkour_course_views_rainbowfall% &r(&b%math_0:1_100/{parkour_course_views_rainbowfall}*{parkour_course_completions_rainbowfall}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_rainbowfall%'
+          commands:
+          - left= parkour join rainbowfall
+          - right= parkour stats rainbowfall
+          - middle= parkour leaderboard rainbowfall
         '22':
           material: BOOK
           stack: 1
-          name: '&r&b%parkour_course_displayname_flyingvillage%&r (Views: &b%parkour_course_views_flyingvillage%&r)'
+          name: '&r&b%parkour_course_displayname_flyingvillage%&r | Online: &b%parkour_course_players_flyingvillage%'
           lore:
           - '&eBest time: &f%parkour_course_record_flyingvillage_player%&8: &b%parkour_course_record_flyingvillage_time%'
-          - '&eCreated by: &f%parkour_course_creator_flyingvillage%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_flyingvillage%&r | &ejoin-fee: &b$%parkour_course_joinfee_flyingvillage%'
           - '&eReward: &b$%parkour_course_ecoreward_flyingvillage% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_flyingvillage%'
-          - '&eOnline: &b%parkour_course_players_flyingvillage%'
+          - '&eCompletions: &b%parkour_course_completions_flyingvillage%&r | &eViews: &b%parkour_course_views_flyingvillage% &r(&b%math_0:1_100/{parkour_course_views_flyingvillage}*{parkour_course_completions_flyingvillage}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_flyingvillage%'
           commands:
           - left= parkour join flyingvillage
           - right= parkour stats flyingvillage
           - middle= parkour leaderboard flyingvillage
+        '27':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_expert%&r | Online: &b%parkour_course_players_expert%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_expert_player%&8: &b%parkour_course_record_expert_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_expert%&r | &ejoin-fee: &b$%parkour_course_joinfee_expert%'
+          - '&eReward: &b$%parkour_course_ecoreward_expert% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_expert%'
+          - '&eCompletions: &b%parkour_course_completions_expert%&r | &eViews: &b%parkour_course_views_expert% &r(&b%math_0:1_100/{parkour_course_views_expert}*{parkour_course_completions_expert}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_expert%'
+          commands:
+          - left= parkour join expert
+          - right= parkour stats expert
+          - middle= parkour leaderboard expert
+        '38':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_pridesnake%&r | Online: &b%parkour_course_players_pridesnake%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_pridesnake_player%&8: &b%parkour_course_record_pridesnake_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_pridesnake%&r | &ejoin-fee: &b$%parkour_course_joinfee_pridesnake%'
+          - '&eReward: &b$%parkour_course_ecoreward_pridesnake% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_pridesnake%'
+          - '&eCompletions: &b%parkour_course_completions_pridesnake%&r | &eViews: &b%parkour_course_views_pridesnake% &r(&b%math_0:1_100/{parkour_course_views_pridesnake}*{parkour_course_completions_pridesnake}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_pridesnake%'
+          commands:
+          - left= parkour join pridesnake
+          - right= parkour stats pridesnake
+          - middle= parkour leaderboard pridesnake
+        '47':
+          material: BOOK
+          stack: 1
+          name: '&r&b%parkour_course_displayname_transsnake%&r | Online: &b%parkour_course_players_transsnake%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_transsnake_player%&8: &b%parkour_course_record_transsnake_time%'
+          - '&eRestrictions: min-lvl: &b%parkour_course_minparkourlevel_transsnake%&r | &ejoin-fee: &b$%parkour_course_joinfee_transsnake%'
+          - '&eReward: &b$%parkour_course_ecoreward_transsnake% &r+ &elvl up: &b%parkour_course_rewardparkourleveladd_transsnake%'
+          - '&eCompletions: &b%parkour_course_completions_transsnake%&r | &eViews: &b%parkour_course_views_transsnake% &r(&b%math_0:1_100/{parkour_course_views_transsnake}*{parkour_course_completions_transsnake}%%&r)'
+          - '&eCreated by: &f%parkour_course_creator_transsnake%'
+          commands:
+          - left= parkour join transsnake
+          - right= parkour stats transsnake
+          - middle= parkour leaderboard transsnake
